# zia_connector_test_tools

./: .gitignore  Makefile  README.md  ZIA-URLCategories-03-17-2022.csv  main.py  pyproject.toml  test.py
entity/: chrome.py
infra/chrome/: chrome.py
lib/zscaler/: parse_test_config.py  test_urlcategory.py
test_config/zscaler/: zia_urlcategory.json
usecase/: get_access.py
utils/common/: prepare.py
utils/zscaler/: UrlcategoryToUrlcategoryName.py  constants.py  urlcategory.py
