[tool.poetry]
name = "zia_connector_test_tools"
version = "0.1.0"
description = ""
authors = ["yuta519 <yuta519.ka23tf@docomo.ne.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
